--- a/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/04.ViewModel学习.md
@@ -1,13 +1,12 @@
 #### 目录介绍
 - 01.ViewModel介绍
+    - 1.1 是什么东西
+    - 1.2 有何优点
 - 02.ViewModel实战必备
     - 2.1 学习方式
     - 2.2 实战必备
 - 03.简单实践操作
-    - 3.1 添加依赖相关库
-    - 3.2 创建ViewModel
-    - 3.3 获取ViewModel
-    - 3.4 使用ViewModel
+    - 3.1 简单案例实践
 - 04.ViewModel原理
     - 4.1 ViewModel架构图
     - 4.2 ViewModel源码UML
@@ -16,73 +15,44 @@
 
 
 ### 01.ViewModel介绍
+#### 1.1 是什么东西
 - ViewModel同样具有生命周期意识的处理跟UI相关的数据，并且，当设备的一些配置信息改变（例如屏幕旋转）它的数据不会消失。
 - ViewModel的另一个特点就是同一个Activity的Fragment之间可以使用ViewModel实现共享数据。
-  
 
 
 
-#### 3.2 创建ViewModel
-- 继承ViewModel类，没有参数
-    ```
-    class SavedStateViewModel : ViewModel() {
-    
-        //数据观察对象
-        private val name = MutableLiveData<String>()
-    
-        //数据观察类
-        fun getName(): LiveData<String> {
-            return name
-        }
-    
-        fun saveNewName(newName: String) {
-            name.value = newName
-        }
-    }
-    ```
-- 继承ViewModel类，有参数
-    ```
-    class SavedDataViewModel(private val data : String) : ViewModel() {
-    
-        //用户获取有参数model
-        class ViewModeFactory(private val string: String) : ViewModelProvider.Factory {
-            override fun <T : ViewModel?> create(modelClass: Class<T>): T {
-                return SavedDataViewModel(string) as T
-            }
-        }
-    
-        //数据观察对象
-        private val name = MutableLiveData<String>()
-    
-        //数据观察类
-        fun getName(): LiveData<String> {
-            LogUtils.d("name : $data")
-            return name
-        }
-    
-        fun saveNewName(newName: String) {
-            name.value = newName
-        }
-    }
-    ```
+#### 1.2 有何优点
 
 
-#### 3.3 获取ViewModel
-- 无构造参数获取
+### 02.ViewModel实战必备
+#### 2.1 学习方式
+- 最好的学习方式仍然是通过官方文档，下面是官方的学习地址：
+    - 谷歌官方文档：[LiveData](https://developer.android.com/topic/libraries/architecture/viewmodel)
+
+
+#### 2.2 实战必备
+
+
+
+
+
+### 03.简单实践操作
+#### 3.1 简单案例实践
+- 第一步：创建ViewModel
+- 第二步：获取ViewModel
+    - 无构造参数获取
     ```
     // 不带参数的ViewModel获取方法使用非常简单
     mSavedStateViewModel = ViewModelProvider(this).get(
         SavedStateViewModel::class.java
     )
     ```
-- 有参数获取
+    - 有参数获取
     ```
     val viewModel = ViewModelProvider(this,SavedDataViewModel.ViewModeFactory("yc"))
     ```
-
-
-#### 3.4 使用ViewModel
-- ViewModel的使用需要结合具体的业务，一般是注册监听数据变化，还有处理数据操作
+- 第三步：使用ViewModel
+    - ViewModel的使用需要结合具体的业务，一般是注册监听数据变化，还有处理数据操作
     ```
     //添加数据监听
     mSavedStateViewModel?.getName()?.observe(this, Observer { savedString ->
@@ -97,14 +67,6 @@
 
 
 
-
-2017年的Google I/O大会上，Google推出了一系列譬如 [Lifecycle、ViewModel、LiveData](https://developer.android.com/jetpack/)等一系列 **更适合用于MVVM模式开发** 的架构组件。
-
-本文的主角就是 **[ViewModel](https://developer.android.com/topic/libraries/architecture/viewmodel)** ，也许有朋友会提出质疑：
-
-> **[ViewModel](https://developer.android.com/topic/libraries/architecture/viewmodel)** 这么简单的东西，从API的使用到源码分析，相关内容都烂大街了，你这篇文章还能翻出什么花来？
-
-我无法反驳，事实上，阅读本文的您可能对MVVM的代码已经 **驾轻就熟**，甚至是经历了完整项目的洗礼，但我依然想做一次大胆地写作尝试—— **即使对于MVVM模式的思想噗之以鼻，或者已经熟练使用MVVM，本文也尽量让您有所收获，至少阅读体验不那么枯燥**。
 
 ## ViewModel的前世今生
 
